[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "y2022d01"
path = "src/y2022/d01/main.rs"

[[bin]]
name = "y2023d01"
path = "src/y2023/d01/main.rs"

[dependencies]
regex = "1.10.2"
